<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/nav_main">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_problem"
                    android:icon="@drawable/ic_check_circle"
                    android:title="@string/nav_problem" />

                <item
                    android:id="@+id/nav_draft"
                    android:icon="@drawable/ic_draft"
                    android:title="@string/nav_draft" />

                <item
                    android:id="@+id/nav_editor"
                    android:icon="@drawable/ic_add"
                    android:title="@string/nav_editor" />
            </group>
        </menu>
    </item>
</menu>
