<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/dialog_alert_width_size_define"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_title"
            app:layout_constraintTop_toTopOf="@+id/edit_text_size_width"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_size_width"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edit_text_size_width"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/text_size_height"
            android:hint="@string/dialog_alert_hint_size_define"
            android:textAlignment="textEnd" />

        <TextView
            android:text="@string/dialog_alert_height_size_define"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_size_height"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_size_height"
            app:layout_constraintTop_toTopOf="@+id/edit_text_size_height"
            app:layout_constraintRight_toRightOf="@+id/text_title"
            app:layout_constraintLeft_toLeftOf="@+id/text_title" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edit_text_size_height"
            app:layout_constraintRight_toRightOf="@+id/edit_text_size_width"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_size_width"
            app:layout_constraintLeft_toLeftOf="@+id/edit_text_size_width"
            android:hint="@string/dialog_alert_hint_size_define"
            android:textAlignment="textEnd" />
    </android.support.constraint.ConstraintLayout>
</layout>