<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <EditText
                android:id="@+id/query_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_toStartOf="@id/button_search"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_query_title"
                android:maxLines="1"
                android:padding="4dp"
                android:singleLine="true"
                android:textColor="@color/colorTextSecondary"
                android:textColorHint="@color/colorTextHint"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/query_genre"
                app:layout_constraintEnd_toStartOf="@+id/button_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="ほげ" />

            <EditText
                android:id="@+id/query_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/hint_query_genre"
                android:padding="4dp"
                android:textColor="@color/colorTextSecondary"
                android:textColorHint="@color/colorTextHint"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/query_title"
                app:layout_constraintStart_toStartOf="@+id/query_title"
                app:layout_constraintTop_toBottomOf="@+id/query_title"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:elevation="1dp"
                android:text="@string/button_search"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/query_genre"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </Toolbar>
</layout>